--- a/index.html
+++ b/index.html
@@ -3,11 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style>
+      .Navbar {
+        display: flex;
+      }
+      .Navbar {
+        background-color: #0a0a23;
+        display: flex;
+        padding: 16px;
+        font-family: sans-serif;
+        color: white;
+      }
+
+      .Navbar__Items {
+        display:flex;
+      }
+
+      .Navbar__Link {
+        padding-right: 8px;
+      }
+
+      .Navbar__Items--right {
+        margin-left:auto;
+      }
+
+    </style>
+    
+    <title>home</title>
 </head>
 <body>
 
-  <h1>Hello world</h1>
+  <div class="Navbar">
+    <div class="Navbar__Link Navbar__Link-brand">
+      Tiago Developer
+    </div>
+    <div class="Navbar__Link">
+      Link
+    </div>
+    <div class="Navbar__Link">
+      Link
+    </div>
+    <div class="Navbar__Link">
+      Link
+    </div>
+    <div class="Navbar__Link">
+      Link
+    </div>
+    <div class="Navbar__Link">
+      Link
+    </div>
+  </div>
     
 </body>
 </html>
