--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="Navbar__Link Navbar__Link-brand">
       Tiago Developer
     </div>
-    <div class="Navbar__Link">
+    <!-- <div class="Navbar__Link">
       Link
     </div>
     <div class="Navbar__Link">
@@ -60,8 +60,22 @@
     </div>
     <div class="Navbar__Link">
       Link
-    </div>
+    </div> -->
   </div>
-    
+  <script src=”https://github.com/octokit/core.js”></script>
+  <script>
+    const octokit = new Octokit({
+      auth: 'YOUR-TOKEN'
+    })
+
+    await octokit.request('GET /repos/{owner}/{repo}/languages', {
+      owner: 'OWNER',
+      repo: 'REPO',
+      headers: {
+        'X-GitHub-Api-Version': '2022-11-28'
+      }
+    })
+  </script>
+
 </body>
 </html>
