--- a/index.html
+++ b/index.html
@@ -62,19 +62,8 @@
       Link
     </div> -->
   </div>
-  <script src=”https://github.com/octokit/core.js”></script>
+  <script src=”https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js”></script>
   <script>
-    const octokit = new Octokit({
-      auth: 'YOUR-TOKEN'
-    })
-
-    await octokit.request('GET /repos/{owner}/{repo}/languages', {
-      owner: 'OWNER',
-      repo: 'REPO',
-      headers: {
-        'X-GitHub-Api-Version': '2022-11-28'
-      }
-    })
   </script>
 
 </body>
