--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       Link
     </div> -->
   </div>
-  <script src=”https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js”></script>
+  <script src=”/script/jquery.min.js”></script>
   <script>
   </script>
 
