ajuste no import do js

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       Link
     </div> -->
   </div>
-  <script src=”/script/jquery.min.js”></script>
+  <script src="script/jquery.min.js"></script>
   <script>
   </script>
 
